# TradingAgents-CN

./: .env.data_service  Dockerfile.data_service  docker-compose.data_service.yml
data_service/: README.md  __init__.py  config.py  main.py
data_service/db/: __init__.py
data_service/layers/: __init__.py  acquisition.py  analysis.py  cache.py  processing.py
data_service/models/: response.py
data_service/routers/: auth.py  cache.py  health.py  market.py  stocks.py  technical.py
data_service/services/: auth_service.py  stock_service.py  technical_service.py
data_service/standalone/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  extract.sh  pyproject.toml  requirements.txt
data_service/tests/: __init__.py  test_data_service.py
tests/: test_data_service.py
