[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trading-data-service"
version = "1.0.0"
description = "Standalone stock data management service with HTTP API"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    # Web framework
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",

    # Database / cache
    "motor>=3.3.0",
    "pymongo>=4.0.0",
    "redis>=5.0.0",

    # Auth
    "PyJWT>=2.0.0",

    # Data sources
    "akshare>=1.10.0",
    "baostock>=0.8.8",
    "tushare>=1.2.89",
    "yfinance>=0.2.18",

    # Data processing
    "pandas>=2.0.0",

    # Utilities
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.24.0",
]

[tool.setuptools.packages.find]
include = ["data_service*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
